--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,10 @@
   transform: translateY(0);
 }
 
+#toggler:checked + .day > .cloud {
+  fill: var(--night-secondary);
+}
+
 #sky {
   height: 100vh;
   width: 100vw;
@@ -115,6 +119,7 @@
   height: 120px;
   width: 200px;
   position: absolute;
+  transition: fill 1000ms ease-in-out;
 }
 
 #cloud1 {
